cambio enfoque de graficas para poder usarla sin tener que cambiar el import y aparte se añadieron dos nuevos archivos para representar practicas de escala de grises y binarizacion

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "sdl.h": "c",
         "sdl_main.h": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "graficas.h": "c"
     }
 }
