--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "sdl.h": "c",
         "sdl_main.h": "c",
         "stdio.h": "c",
-        "graficas.h": "c"
+        "graficas.h": "c",
+        "practica.h": "c"
     }
 }
